--- a/index.html
+++ b/index.html
@@ -6,54 +6,54 @@
 	<link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
-	<header class="aaa">
-		<img src="./eisenhower-matrix.jpg" alt="Want more details?">
-		<a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+<body class="body">
+	<header class="header">
+		<img class="header__img" src="./eisenhower-matrix.jpg" alt="Want more details?">
+		<a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
 			Want more details?
 		</a>
 	</header>
-	<main class="centered-main-page-element">
-		<section id="topSectionForAddingElementToList">
-			<h3>Add Item</h3>
-			<div class="task-row-wrapper">
-				<input id="new-task" class="task" type="text">
-				<button>Add</button>
+	<main class="main">
+		<section class="main-section">
+			<h3 class="main-section__title main-section__title-add">Add Item</h3>
+			<div class="task-container">
+				<input class="task-item__text" id="new-task" type="text">
+				<button class="task-btn">Add</button>
 			</div>
 		</section>
-		<section>
-			<h3>Todo</h3>
-			<ul id="incompleteTasks">
-				<li>
-					<input type="checkbox">
-					<label class="task">Pay Bills</label>
-					<input type="text" class="task">
-					<button class="edit">Edit</button>
-					<button class="delete">
+		<section class="main-section">
+			<h3 class="main-section__title">Todo</h3>
+			<ul class="task-list" id="incompleteTasks">
+				<li class="task-item">
+					<input class="task-item__checkbox" type="checkbox">
+					<label class="task-item__label">Pay Bills</label>
+					<input class="task-item__text" type="text">
+					<button class="task-btn btn__edit">Edit</button>
+					<button class="task-btn btn__delete">
 						<img src="./remove.svg" alt="Delete">
 					</button>
 				</li>
-				<li class="editMode">
-					<input type="checkbox">
-					<label class="task">Go Shopping</label>
-					<input type="text" value="Go Shopping" class="task">
-					<button class="edit">Save</button>
-					<button class="delete">
-						<img src="./remove.svg" alt="Delete">
+				<li class="task-item task-item__edit">
+					<input class="task-item__checkbox" type="checkbox">
+					<label class="task-item__label">Go Shopping</label>
+					<input class="task-item__text" type="text" value="Go Shopping">
+					<button class="task-btn btn__edit">Save</button>
+					<button class="task-btn btn__delete">
+						<img class="btn__delete-icon" src="./remove.svg" alt="Delete">
 					</button>
 				</li>
 			</ul>
 		</section>
-		<section>
-			<h3>Completed</h3>
-			<ul id="completed-tasks">
-				<li>
-					<input type="checkbox" checked>
-					<label class="task">See the Doctor</label>
-					<input type="text" class="task">
-					<button class="edit">Edit</button>
-					<button class="delete">
-						<img src="./remove.svg" alt="Delete"> 
+		<section class="main-section">
+			<h3 class="main-section__title">Completed</h3>
+			<ul class="task-list task-list__completed" id="completed-tasks">
+				<li class="task-item"> 
+					<input class="task-item__checkbox" type="checkbox" checked>
+					<label class="task-item__label">See the Doctor</label>
+					<input class="task-item__text" type="text">
+					<button class="task-btn btn__edit">Edit</button>
+					<button class="task-btn btn__delete">
+						<img class="btn__delete-icon" src="./remove.svg" alt="Delete">
 					</button>
 				</li>
 			</ul>
