--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<main class="main">
 		<section class="main-section">
 			<h3 class="main-section__title main-section__title-add">Add Item</h3>
-			<div class="task-container">
+			<section class="task-container">
 				<input class="task-item__text" id="new-task" type="text">
 				<button class="task-btn">Add</button>
-			</div>
+			</section>
 		</section>
 		<section class="main-section">
 			<h3 class="main-section__title">Todo</h3>
@@ -30,7 +30,7 @@
 					<input class="task-item__text" type="text">
 					<button class="task-btn btn__edit">Edit</button>
 					<button class="task-btn btn__delete">
-						<img src="./remove.svg" alt="Delete">
+						<img class="btn__delete-icon" src="./remove.svg" alt="Delete">
 					</button>
 				</li>
 				<li class="task-item task-item__edit">
@@ -47,7 +47,7 @@
 		<section class="main-section">
 			<h3 class="main-section__title">Completed</h3>
 			<ul class="task-list task-list__completed" id="completed-tasks">
-				<li class="task-item"> 
+				<li class="task-item">
 					<input class="task-item__checkbox" type="checkbox" checked>
 					<label class="task-item__label">See the Doctor</label>
 					<input class="task-item__text" type="text">
