fix: correct names of identifiers and classes according to rule 3.2 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</section>
 		<section class="main-section">
 			<h3 class="main-section__title">Todo</h3>
-			<ul class="task-list" id="incompleteTasks">
+			<ul class="task-list" id="incompleted-tasks">
 				<li class="task-item">
 					<input class="task-item__checkbox" type="checkbox">
 					<label class="task-item__label">Pay Bills</label>
